[tool.poetry]
name = "deep-learning-with-keras"
version = "0.1.0"
description = ""
authors = ["David Lee <davie.lee@unomic.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7"
keras = "~2.0"
tensorflow = "~1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
